[package]
name = "htmpl"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = "0.9.3"
chrono = "0.4.38"
ego-tree = "0.6.3"
markdown = "1.0.0-alpha.20"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
scraper = "0.20.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full", "rt-multi-thread"] }
tower = "0.5.1"
tower-service = "0.3.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v7"] }
