[package]
name = "htmpl"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE.txt"

[dependencies]
ego-tree = "0.6.3"
html5ever = "0.27.0"
markdown = "1.0.0-alpha.20"
rusqlite = { version = "0.32.1", features = ["bundled"] }
scraper = "0.20.0"
tempfile = "3.13.0"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace"] }
