[package]
name = "htmpl"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "htmpl is a library for generating HTML files from HTML templates."
homepage = "https://cceckman.com/r/htmpl"
repository = "https://cceckman.com/r/htmpl"
readme = "README.md"

[dependencies]
ego-tree = "0.6.3"
html5ever = "0.27.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
scraper = "0.20.0"
thiserror = "1.0.63"
tracing = "0.1.40"

[dev-dependencies]
tempfile = "3.13.0"
test-log = { version = "0.2.16", features = ["trace"] }

